--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IMMF - Islamic Movement of Muslim Freedom</title>
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -45,6 +45,6 @@
   <p>&copy; 2024 Islamic Movement of Muslim Freedom. All Rights Reserved.</p>
   <p><a href="https://t.me/IMMFCONTACT_BOT">Join Our Telegram</a></p>
 </footer>
-<script src="/scripts/scripts.js" ></script>
+<script src="scripts.js" ></script>
 </body>
 </html>
