--- a/report.html
+++ b/report.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IMMF - Report a Threat</title>
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <!-- Add Google reCAPTCHA Script -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
